--- a/Statistics & Probability/Readme
+++ b/Statistics & Probability/Readme
@@ -1,1 +1,29 @@
+### the concepts I learned during My Journey, And you can discover more details on each Folder
 
+1. Types of data
+2. Types of Graphs 
+3. Shapes of Distributions
+4. Attributies of the distributions
+5. Center measures and spread measures
+6. Percentile and z-Score 
+7. Correlation Coefficient
+8. Types of Bias
+
+9. Random Variables 
+10. Types of Random Variables 
+11. Expected Value 
+12. Density Curve 
+13. 
+
+### Probability 
+
+1. Types of Probability 
+2. Dependent Events 
+3. Independent Events 
+4. Addition Rule for probability and using it with Vann Diagram 
+5. Multiplication Rule for Independent events or dependent events
+6- Permutation
+7. Combinations
+8. Probability using combination 
+9. General Rule for binomial coefficients (Probability with Combination)
+10. 
