--- a/Statistics & Probability/Readme
+++ b/Statistics & Probability/Readme
@@ -8,6 +8,7 @@
 6. Percentile and z-Score 
 7. Correlation Coefficient
 8. Types of Bias
+9. Empirical rule
 
 9. Random Variables 
 10. Types of Random Variables 
